--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="gender">Gender</string>
+    <string name="alive">Alive</string>
+    <string name="origin">Origin</string>
 </resources>
